<resources>
    <string name="app_name">PARCIAL1</string>
    <string name="Text1">Nombre Contacto 1</string>
    <string name="Text2">Nombre Contacto 2</string>
    <string name="Text3">Nombre Contacto 3</string>
    <string name="Text4">Nombre Contacto 4</string>
    <string name="Text5">Nombre Contacto 5</string>
    <string name="Text6">Nombre Contacto 6</string>
    <string name="Text7">NOmbre contacto 7</string>
    <string name="Text8">Nombre Contacto 8</string>
    <string name="Text9">Nombre COntacto 9</string>
    <string name="Text10">Nombre Contacto 10</string>
    <string name="Text11">Nombre Contacto 11</string>
    <string name="Name">Nombre: Andres Teran</string>
    <string name="Lastname">Apellido: Teran Ortega</string>
    <string name="Age">Edad: 22 años</string>
    <string name="TeleNumber">Telefono: 7589742</string>
    <string name="Email">Correo Electronico</string>
    <string name="ooment">Comentario</string>
    <string name="Actua">Actualizar</string>
    <string name="str_title_toolbar">Volver a Lista Principal</string>
</resources>
