<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal_class"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andresteran.parcial1.Principal_class">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/Logo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_launcher"
            />
        <TextView
            android:id="@+id/Text_ini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/Logo1"
            android:text="@string/Name"/>
        <TextView
            android:id="@+id/Lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Text_ini"
            android:layout_toRightOf="@id/Logo1"
            android:text="@string/Lastname"/>
        <TextView
            android:id="@+id/AGE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Lastname"
            android:layout_toRightOf="@id/Logo1"
            android:text="@string/Age"/>
        <TextView
            android:id="@+id/Tele_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/AGE"
            android:layout_toRightOf="@id/Logo1"
            android:text="@string/TeleNumber"/>


    </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/StyleTextInputBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/StyleTextInputBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ooment"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Actua"
                android:theme="@style/StyleButton"/>





        </LinearLayout>

</ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
